grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-prometheus
  namespace: osipov
spec:
  ports:
    - name: ingress-prometheus
      port: 80
      protocol: TCP
      targetPort: 9901
  selector:
    app: controller-ingress-nginx-controller
  type: ClusterIP
